fixed stlye error where if cs was too high it went to next line

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -128,7 +128,7 @@ footer {
 }
 
 .summary {
-  font-size: 16px;
+  font-size: 15px;
   padding: 10px;
   float: left;
   padding-left: 30px;
